// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render BlogForm correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Title"
    type="text"
    value=""
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add the text body"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Save Blog
    </button>
  </div>
</form>
`;

exports[`should render BlogForm correctly with blog data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Title"
    type="text"
    value="are you sure you want to do this?"
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add the text body"
    value="Body bOdy boDy bodY"
  />
  <div>
    <button
      className="button"
    >
      Save Blog
    </button>
  </div>
</form>
`;

exports[`should render error for invalid submission 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Title"
    type="text"
    value=""
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add the text body"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Save Blog
    </button>
  </div>
</form>
`;

exports[`should render error for invalid submission 2`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Title"
    type="text"
    value=""
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add the text body"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Save Blog
    </button>
  </div>
</form>
`;
